--- a/index.html
+++ b/index.html
@@ -22,5 +22,14 @@
 
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 <script>
-    
+    //map initialization
+    var map = L.map('map').setView([51.505, -0.09], 13);
+
+    //osm layer
+    var osm =L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+    }).addTo(map);
+
+    osm.addTo(map)
+
 </script>
