--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ var employment =L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
 
     mentalHealth.addTo(map)
 
+    // git merge mai n
     //osm layer case management
     var casemanage =L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
@@ -104,8 +105,13 @@ var employment =L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
 
     //marker
     var singleMarker = L.marker([42.3509,-71.1089]).addTo(map);
-    var popup = singleMarker.bindPopup('This is the Boston').openPopup();
+    var popup = singleMarker.bindPopup('This is Boston').openPopup();
     popup.addTo(map);
+
+    var cities = L.layerGroup([singleMarker]);
+
+
+
 
     //layer controller
     var baseMaps = {
@@ -128,5 +134,3 @@ var employment =L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
     // map.removeLayer(singleMarker)
 
     L.control.layers(baseMaps, overlayMaps, { collapsed: false }).addTo(map);
-
-</script>
