some sidebar stuff

--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project with Tabs</title>
 
+    <!--link to js for map-->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <link rel="stylesheet" href="styles.css"> <!-- Link to CSS file -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" /> <!--link to js for map-->
+    <link rel="stylesheet" href="sidebar.css"> <!-- Link to CSS file -->
 </head>
 <body>
     <!-- title-->
     <h1 style="text-align: center; margin-top: 20px;">the project</h1>
+
+    <!-- link to sidebar html-->
+    <iframe src="sidebar.html" width="250px" height="100%" style="float: left; border: none;"></iframe>
 
     <!-- tab nav -->
     <div class="tab">
