--- a/index.html
+++ b/index.html
@@ -9,6 +9,196 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 
     <style>
+        <head>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Cocomat+Pro:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+
+    <style>
+        body {
+            font-family: 'Cocomat Pro', sans-serif;
+            background: linear-gradient(to bottom, #f2f2f2, #e0e0e0);
+            color: #1f7ecb;
+            text-transform: uppercase;
+            display: grid;
+            height: 100vh;
+            place-items: center;
+        }
+        h1, h2, p, label, button, a {
+            font-weight: bold;
+            font-family: 'Poppins', sans-serif;
+        }
+        h1 {
+            text-align: center;
+            margin-top: 20px;
+            color: #1f7ecb;
+        }
+        h2 {
+            color: #86c4fa;
+        }
+        a {
+            box-shadow: inset 0 0 0 0 #54b3d6;
+            color: #54b3d6;
+            padding: 0 .25rem;
+            margin: 0 -.25rem;
+            transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+            text-decoration: none;
+        }
+        a:hover {
+            color: #fff;
+            box-shadow: inset 200px 0 0 0 #54b3d6;
+        }
+        #map {
+            width: 60%; 
+            height: 70vh; 
+            margin: 20px auto; 
+            float: left;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        #addLocationForm {
+            margin: 20px;
+            text-align: center;
+        }
+        button {
+            border-width: 1px;
+            width: 200px;
+            height: 50px;
+            border-radius: 25px;
+            background: linear-gradient(to right, #6fb07f, #86c4fa);
+            position: relative;
+            border: 2px solid #54b3d6;
+            color: white;
+            font-size: 16px;
+            cursor: pointer;
+            outline: none;
+            transition: all 0.3s ease-in-out;
+        }
+        button:hover {
+            background: linear-gradient(to right, #54b3d6, #6fb07f);
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+        }
+        button:focus {
+            -webkit-animation: extend 1s ease-in-out;
+            animation: extend 1s ease-in-out;
+            -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+        }
+        button:focus > span {
+            -webkit-animation: disappear 1s ease-in-out;
+            animation: disappear 1s ease-in-out;
+            -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+        }
+        button:focus > img {
+            -webkit-animation: appear 1s ease-in-out;
+            animation: appear 1s ease-in-out;
+            -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+        }
+
+        /* Tab styles */
+        .tab {
+            display: flex;
+            cursor: pointer;
+            padding: 10px;
+            background-color: #dddcdb;
+            border: 1px solid #ccc;
+            border-bottom: none;
+        }
+        .tab button {
+            background-color: inherit;
+            border: none;
+            outline: none;
+            padding: 10px 20px;
+            transition: background-color 0.3s, color 0.3s, transform 0.3s;
+            font-weight: bold;
+            color: #1f7ecb;
+        }
+        .tab button:hover {
+            background-color: #86c4fa;
+            color: #fff;
+            transform: translateY(-3px);
+        }
+        .tab button.active {
+            background-color: #ccc;
+            color: #1f7ecb;
+        }
+
+        /* Tab content */
+        .tab-content {
+            display: none;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-top: none;
+            background: linear-gradient(to bottom, #f2f2f2, #e0e0e0);
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .tab-content.active {
+            display: block;
+        }
+
+        /* Animation effects */
+        @-webkit-keyframes extend {
+            0% {
+                width: 200px;
+                height: 50px;
+                border-radius: 25px;
+            }
+            100% {
+                width: 220px;
+                height: 55px;
+                border-radius: 30px;
+                background: #6fb07f;
+            }
+        }
+        @keyframes extend {
+            0% {
+                width: 200px;
+                height: 50px;
+                border-radius: 25px;
+            }
+            100% {
+                width: 220px;
+                height: 55px;
+                border-radius: 30px;
+                background: #6fb07f;
+            }
+        }
+        @-webkit-keyframes disappear {
+            0% {
+                opacity: 1;
+            }
+            100% {
+                opacity: 0;
+            }
+        }
+        @keyframes disappear {
+            0% {
+                opacity: 1;
+            }
+            100% {
+                opacity: 0;
+            }
+        }
+        @-webkit-keyframes appear {
+            0% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
+        }
+        @keyframes appear {
+            0% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
+        }
+  
         #map {
             width: 60%; 
             height: 70vh; 
@@ -19,9 +209,7 @@
             margin: 20px;
             text-align: center;
         }
-        #title {
 
-        }
         /* tab style */
         .tab {
             display: flex;
