--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </head>
 <body>
     <!-- title-->
-    <h1 style="text-align: center; margin-top: 20px; color: #1f7ecb; font-family: sans-serif;">The Project</h1>
+    <h1 style="text-align: center; margin-top: 20px; color: #1f7ecb; font-family: sans-serif;">The Refugee Project</h1>
 
     <!-- tab nav -->
     <div class="tab">
