--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             background: linear-gradient(to bottom, #f2f2f2, #e0e0e0);
             color: #1f7ecb;
             text-transform: uppercase;
-            display: grid;
-            height: 100vh;
-            place-items: center;
+            display: block;
+            margin: 0;
+            padding: 0;
         }
         h1, h2, p, label, button, a {
             font-weight: bold;
@@ -72,6 +72,7 @@
         button:hover {
             background: linear-gradient(to right, #54b3d6, #6fb07f);
             box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+            transform: translateY(-3px);
         }
         button:focus {
             -webkit-animation: extend 1s ease-in-out;
@@ -246,6 +247,65 @@
     </div>
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script>
+        // open tab
+        function openTab(evt, tabName) {
+            var i, tabcontent, tablinks;
+            // hide rest
+            tabcontent = document.getElementsByClassName("tab-content");
+            for (i = 0; i < tabcontent.length; i++) {
+                tabcontent[i].style.display = "none";
+            }
+            // remove active
+            tablinks = document.getElementsByClassName("tablinks");
+            for (i = 0; i < tablinks.length; i++) {
+                tablinks[i].className = tablinks[i].className.replace(" active", "");
+            }
+            // show current tab
+            document.getElementById(tabName).style.display = "block";
+            evt.currentTarget.className += " active";
+        }
 
-    <script
+        // default active
+        document.querySelector(".tab button").click();
 
+        // Ensure the map code runs after the page is fully loaded
+        window.onload = function() {
+            // Map initialization
+            var map = L.map('map').setView([42.3509, -71.1089], 12);
+
+            // Base OSM layer 
+            var osm = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+            }).addTo(map);
+
+            // All markers
+            var singleMarker = L.marker([42.3509, -71.1089]).addTo(map);
+            var popup = singleMarker.bindPopup('This is Boston').openPopup();
+            popup.addTo(map);
+
+            var ilc = L.marker([42.427132, -71.067299]).addTo(map);
+            var popup1 = ilc.bindPopup('This is The Immigrant Learning Center').openPopup();
+            popup1.addTo(map);
+
+            // Add user location function
+            document.getElementById('addLocationBtn').addEventListener('click', function () {
+                var name = document.getElementById('locationName').value;
+                var lat = parseFloat(document.getElementById('latitude').value);
+                var lng = parseFloat(document.getElementById('longitude').value);
+                var description = document.getElementById('description').value;
+
+                if (name && !isNaN(lat) && !isNaN(lng) && description) {
+                    var newMarker = L.marker([lat, lng])
+                        .bindPopup(`<b>${name}</b><br>${description}`)
+                        .addTo(map);
+
+                    alert('Location added successfully!');
+                } else {
+                    alert('Please fill in all fields with valid data.');
+                }
+            });
+        }
+    </script>
+</body>
+</html>
