minor style changes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="layerDropdown">
             <label id="selectfilter" for="layerSelect">Select a Filter:</label>
             <select id="layerSelect" onchange="changeLayer(this.value)">
-                <option value="">--Select a Filter--</option>
+                <option value="">--Click for Options--</option>
                 <option value="citywide">Locations - Citywide</option>
                 <option value="greaterBoston">Locations - Greater Boston</option>
                 <option value="allston">Locations - Allston</option>
@@ -73,7 +73,7 @@
         
         <!-- Form for adding locations -->
         <div id="addLocationForm">
-            <h3 style="text-align: center; color: rgb(21, 15, 77); font-family: sans-serif;">Add your own location</h3>
+            <h2>Add your own location</h2>
             <label for="locationName">Name:</label>
             <input type="text" id="locationName" placeholder="Enter location name"><br><br>
             <label for="latitude">Latitude:</label>
