more css changes

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         
         <!-- Form for adding locations -->
         <div id="addLocationForm">
-            <h2>Add your own location</h2>
+            <h2>Add Your Own Location</h2>
             <label for="locationName">Name:</label>
             <input type="text" id="locationName" placeholder="Enter location name"><br><br>
             <label for="latitude">Latitude:</label>
