--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Project with Tabs</title>
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <!-- title -->
