--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <!--Service selection bar-->
             <label for="layerSelect" class="labelDrop">Accessibility:</label>
             <select id="layerSelectService" onchange="changeLayer(this.value)">
+                <option value="">---</option>
                 <option value="parking">Parking Available</option>
                 <option value="mbta">MBTA Accessible</option>
                 <option value="wheelchair">Wheelchair Accessible</option>
