area select bar fixed

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="layerDropdown">
             <label for="layerSelect" class="labelDrop">Area:</label>
             <select id="layerSelectArea" onchange="changeLayer(this.value)">
+                <option value="">---</option>
                 <option value="citywide">Citywide</option>
                 <option value="greaterBoston">Greater Boston</option>
                 <option value="allston">Allston</option>
